--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,15 @@
 {
   "builds": [
     {
-      "src": "./app/index.ts",
-      "use": "@vercel/node"
+      "src": "./app/index.js",
+      "use": "@vercel/node",
+      "config": { "includeFiles": ["app/**"] }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "app/index.js"
     }
   ]
 }
