--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,15 @@
 {
   "builds": [
     {
-      "src": "./app/index.js",
+      "src": "dist/index.ts",
       "use": "@vercel/node",
-      "config": { "includeFiles": ["app/**"] }
+      "config": { "includeFiles": ["dist/**"] }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "app/index.js"
+      "dest": "dist/"
     }
   ]
 }
