--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "nodemailer": "^6.9.11"
   },
   "scripts": {
-    "start": "ts-node api/index.ts",
+    "start": "ts-node api/app.ts",
     "build": "tsc",
-    "serve": "node dist/index.js"
+    "serve": "pnpm build && node api/app.js"
   }
 }
